# MyFork-KPI-Engine

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  manage.py  mount.sh  prova.ipynb  pyproject.toml
.github/workflows/: ci.yml  devsecops.yml  devsecops_container_scanning.yml
docs/: app.api.html  app.html  app.kpi_engine.dynamic.html  app.kpi_engine.html  app.kpi_engine.rst  app.models.html  app.models.requests.html  app.models.responses.html  app.rst  app.services.html  app.utils.html  genindex.html  index.html  index.rst  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/doctrees/: app.doctree  app.models.doctree  app.models.responses.doctree  environment.pickle
docs/_build/html/: app.api.endpoints.html  app.models.requests.html  app.utils.html
docs/_build/html/_sources/: app.api.rst.txt
docs/_modules/app/: main.html
docs/_modules/app/kpi_engine/: regexp.html
docs/_modules/app/models/: exceptions.html  real_time_kpi.html
docs/_modules/app/services/: database.html  gui.html
docs/_sources/: app.kpi_engine.dynamic.rst.txt  app.models.rst.txt  app.rst.txt  app.services.rst.txt  app.utils.rst.txt  index.rst.txt  modules.rst.txt
docs/html/: app.kpi_engine.html
docs_imp/: app.models.requests.rst  app.models.responses.rst
docs_imp/_build/doctrees/: app.api.doctree  app.kpi_engine.doctree  app.kpi_engine.dynamic.doctree  app.utils.doctree  index.doctree  modules.doctree
docs_imp/_build/html/: app.api.html  app.html  app.services.html  modules.html  searchindex.js
docs_imp/_build/html/_modules/: index.html
docs_p/: app.models.requests.rst  app.models.responses.rst  conf.py  index.rst
docs_p/_build/doctrees/: app.api.doctree  app.api.endpoints.doctree  app.doctree  app.kpi_engine.doctree  app.kpi_engine.dynamic.doctree  app.models.doctree  app.models.requests.doctree  app.models.responses.doctree  app.services.doctree  app.utils.doctree  environment.pickle  index.doctree  modules.doctree
docs_p/_build/html/: .buildinfo  app.api.endpoints.html  app.api.html  app.html  app.kpi_engine.dynamic.html  app.kpi_engine.html  app.models.html  app.models.requests.html  app.models.responses.html  app.services.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_p/_build/html/_modules/: index.html
docs_p/_build/html/_sources/: app.api.endpoints.rst.txt  app.api.rst.txt  app.kpi_engine.dynamic.rst.txt  app.kpi_engine.rst.txt  app.services.rst.txt  index.rst.txt
old_docs/: app.api.endpoints.rst  app.utils.rst
old_docs/_build/doctrees/: app.api.endpoints.doctree  app.models.requests.doctree  app.services.doctree  environment.pickle
old_docs/_build/html/: app.models.responses.html  genindex.html
old_docs/_build/html/_sources/: app.models.rst.txt
src/app/: db.py  main.py  models.py
src/app/api/: router.py
src/app/api/endpoints/: kpi.py  real_time.py
src/app/kpi_engine/: dynamic_calc.py  exceptions.py  grammar.py  kpi_engine.py  kpi_request.py  kpi_response.py  regexp.py
src/app/kpi_engine/dynamic/: dynamic_engine.py
src/app/models/: exceptions.py  grammar.py  real_time_kpi.py
src/app/services/: data_processing.py  database.py  gui.py  knowledge_base.py
src/app/utils/: kafka_admin.py
src/main/app/: models.py  serializers.py  urls.py  views.py
src/main/kpi_engine/: __init__.py  app.py  settings.py  urls.py
src/test/engine/: test_kpi_engine.py  test_kpi_request.py
src/tests/: KB.txt  test_dynamic_calc.py  test_kpi_engine.py  test_kpi_request.py  test_matching.py
(+43 files in other folders)
