[tool.poetry]
name = "fastapi-kpi-engine"
version = "0.1.0"
description = "KPI Calculation Engine. All the core logic of KPI calculations is responsibility of this project."
authors = [
    "Fabrizio De Castelli <decastellifabrizio@gmail.com>",
    "Marco Minnniti <m.minniti2001@gmail.com>",
    "Filippo Alessandro Sandoval Villareal <filipposandoval@gmail.com>",
    "Maria Immacolata Colella <mariacole0202@gmail.com>"
]
license = "MIT"
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.23.0"
sqlalchemy = "^1.4.0"
psycopg2-binary = "^2.9.6"
numexpr = "^2.10.1"
pandas = "^2.2.3"
numpy = "^2.1.3"
pytest-cov = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"          # Testing framework
pytest-asyncio = "^0.19.0"
black = "^22.3"         # Code formatter
ruff = "^0.0.263"       # Linter
mypy = "^0.971"         # Static type checker
flake8 = "^4.0"         # PEP8 compliance checker

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

